--- a/style.css
+++ b/style.css
@@ -9,3 +9,10 @@ h1 {
   font-style: italic;
   color: #373fff;
 }
+
+/*index page*/
+#index{
+  background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Ftw%20cover.png?v=1618461432258");
+  background-size: cover;
+  background-repeat: no-rep
+}
