--- a/style.css
+++ b/style.css
@@ -16,13 +16,17 @@ h1 {
 #index{
   background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Ftw%20cover.png?v=1618461432258");
   font-family: verdana, helvetica, sans-serif;
+  text-align: center;
 }
 #enter{
   color: black;
-  position: center;
+  position: relative; 
+  font-size: 4vw;
+  
+  
 }
 #tw{
   color: rgba(255, 214, 0, 1);
-  text-align: center;
-  font-size: windowWidth; 
+  font-size: 3vw;
+  margin:0px, 0px;
 }
