🧀💰 Checkpoint ./tw.js:30726734/2658 ./index.html:30726734/30 ./style.css:30726734/87

--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ h1 {
   
 }
 #tw{
+  border-style:solid;
   color: rgba(255, 214, 0, 1);
-  font-size: 3vw;
-  margin:0px, 0px;
+  font-size: 2.5vw;
+  //margin:0px, 0px, 0px, 0px;
+  padding:0px;
 }
