--- a/style.css
+++ b/style.css
@@ -39,3 +39,8 @@ a:hover{
   font-size: 2.5vw;
   position: relative;
 }
+
+/*home page*/
+#home{
+  background-image: url("https://img.koreatimes.co.kr/upload/newsV2/images/202010/ef20ebdd862d4f04a6e179d38908aee2.jpg/dims/resize/740/optimize");
+}
