--- a/style.css
+++ b/style.css
@@ -13,14 +13,12 @@ h1 {
 }
 
 a:link{
-  color:black;
+  color:white;
 }
 a:visited{
-  color: black;
+  color: white;
 }
-a:hover{
-  color:rgba(255, 214, 0, 1);
-}
+
 
 /*index page*/
 #index{
@@ -32,6 +30,15 @@ a:hover{
   position: relative; 
   top: 20vw;
   font-size: 4vw;
+}
+#enter:link{
+  color:black;
+}
+#enter:visited{
+  color:black;
+}
+#enter:hover{
+  color:rgba(255, 214, 0, 1);
 }
 
 #tw{
