--- a/style.css
+++ b/style.css
@@ -53,5 +53,14 @@ a:hover{
 #homepage{
   text-align: center;
   color:white;
-  font-size:2.5vw;
+  font-size:4vw;
+
+    left: 0;
+    line-height: 200px;
+    margin-top: -100px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 100%;
+}
 }
