--- a/style.css
+++ b/style.css
@@ -54,13 +54,6 @@ a:hover{
   text-align: center;
   color:white;
   font-size:4vw;
-
-    left: 0;
-    line-height: 200px;
-    margin-top: -100px;
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    width: 100%;
-}
+  left: 0;
+  margin-top: 30vw;
 }
