--- a/style.css
+++ b/style.css
@@ -9,6 +9,22 @@
 }
 
 
+
+.announcement {
+    display: none;
+    background: yellow;
+    margin-top: 40px;
+    font-size: 24px;
+    padding: 6px;
+}
+
+.button-example{
+    margin-top: 100px; 
+
+
+
+
+
 body{
   background-size: cover;
   background-repeat: no-repeat;
