🎿🎫 Checkpoint ./style.css:30726734/23 ./main.js:30726734/744 ./about.html:30726734/291

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 
 
-.announcement {
+.text{
     display: none;
     background: yellow;
     margin-top: 40px;
@@ -20,6 +20,7 @@
 
 .button-example{
     margin-top: 100px; 
+}
 
 
 
