--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
          url('reeniebeanie-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 
 .text{
@@ -50,6 +49,7 @@ a:hover{
 #index{
   background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Ftw%20cover.png?v=1618461432258");
   font-family: verdana, helvetica, sans-serif;
+  text-align:center;
 }
 #tw{
   color: rgba(255, 214, 0, 1);
@@ -58,18 +58,21 @@ a:hover{
 }
 
 h1{
-  text-align: center;
   font-size:8vw;
   left: 0;
   margin-top: 30vw;
 }
 
+h3{
+  font-family: reenie_beanieregular;
+}
+
 /*home page*/
 .home{
+  text-align:center;
   background-image: url("https://cdn-japantimes.com/wp-content/uploads/2020/07/KYODO_2031_200728_0215_0418-1595933516.jpg");
 }
 .homepage{
-  font-family: reenie_beanieregular;
   color:white;
 }
 .homepage:link{
