--- a/style.css
+++ b/style.css
@@ -8,18 +8,6 @@
     font-style: normal;
 }
 
-.text{
-    display: none;
-    background: yellow;
-    margin-top: 40px;
-    font-size: 24px;
-    padding: 6px;
-}
-
-.button-example{
-    margin-top: 100px; 
-}
-
 
 
 body{
@@ -46,12 +34,12 @@ a:hover{
 
 
 /*index page*/
-#index{
+.index{
   background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Ftw%20cover.png?v=1618461432258");
   font-family: verdana, helvetica, sans-serif;
   text-align:center;
 }
-#tw{
+.tw{
   color: rgba(255, 214, 0, 1);
   font-size: 2.5vw;
   position: relative;
