🐃🕷 Checkpoint ./mission.html:30726734/95 ./archives.html:30726734/60 ./memorials.html:30726734/75 ./style.css:30726734/199 ./about.html:30726734/368

--- a/style.css
+++ b/style.css
@@ -32,13 +32,8 @@ a:hover{
   color:rgba(255, 214, 0, 1);
 }
 
-a.arrow{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-
-
+.arrow{
+  text-align:center;
 }
 
 
