🚕🍁 Checkpoint ./mission.html:30726734/347 ./archives.html:30726734/358 ./memorials.html:30726734/438 ./about.html:30726734/44 ./style.css:30726734/83 ./involved.html:30726734/16

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 
-
+/*global styling*/
 body{
   background-size: cover;
   background-repeat: no-repeat;
@@ -31,10 +31,11 @@ a:visited{
 a:hover{
   color:rgba(255, 214, 0, 1);
 }
-
 .arrow{
   text-align:center;
+  padding: 10vw;
 }
+
 
 
 /*index page*/
@@ -43,6 +44,7 @@ a:hover{
   font-family: verdana, helvetica, sans-serif;
   text-align:center;
 }
+
 .tw{
   color: rgba(255, 214, 0, 1);
   font-size: 2.5vw;
@@ -73,14 +75,11 @@ a.homepage:visited{
 }
 
 /*about page*/
-.about{
-  
-}
 .aimages{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 60%;
+  width: 75%;
 }
 
 
