🏏🚄 Checkpoint ./style.css:30726734/132 ./.glitch-assets:30726734/378

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ a.homepage:visited{
   color:white;
 }
 a.homepage:hover{
-  
+  background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fcrossout.png?v=1618902352175" width=20vw);
 }
 
 /*about page*/
