🛰🎓 Checkpoint ./archives.html:30726734/38 ./style.css:30726734/535 ./memorials.html:30726734/10

--- a/style.css
+++ b/style.css
@@ -92,6 +92,15 @@ a.homepage:hover{
 
 
 /*archives page*/
-#profiles{
+.archives{
   text-align: center;
+}
+.yongsu{
+  padding:5vh;
+}
+.bokdong{
+  padding:5vh;
+}
+.estelita{
+  padding:5vh;
 }
