--- a/style.css
+++ b/style.css
@@ -82,12 +82,13 @@ h1.home1{
 }
 a.homepage:link{
   color:white;
+  border: 3px solid red;
 }
 a.homepage:visited{
   color:white;
 }
 a.homepage:hover{
- background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fcrossout.png?v=1618993106074");
+ background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fcrossout.png?v=1618993732792");
  background-repeat:no-repeat;
  background-size: 100%;
 }
