--- a/style.css
+++ b/style.css
@@ -80,17 +80,27 @@ h1.home1{
   font-size:11vw;
   font-weight: bold;
 }
+/*
+.home2{
+   border: 3px solid red;
+}*/
+a.homepage{
+  /*border: 3px solid red;*/
+  margin-top: 100px;
+  
+}
 a.homepage:link{
   color:white;
-  border: 3px solid red;
 }
 a.homepage:visited{
   color:white;
 }
 a.homepage:hover{
+ /*background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fcrossout%20copy.png?v=1618994363341"); */
  background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fcrossout.png?v=1618993732792");
  background-repeat:no-repeat;
  background-size: 100%;
+ top:20%;
 }
 
 /*about page*/
