🎹⛸ Checkpoint ./style.css:30726734/157 ./about.html:30726734/43 ./index.html:30726734/66

--- a/style.css
+++ b/style.css
@@ -36,8 +36,9 @@ a:hover{
   text-align:center;
   padding: 10vw;
 }
-.bcursor{
-   cursor: url("asset/pigeoncursor.png"), auto;
+html.cursor{
+  cursor: auto;
+  cursor: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbutterfly.png?v=1618901369440");
 }
 
 
