--- a/style.css
+++ b/style.css
@@ -45,18 +45,21 @@ html.cursor{
 
 
 /*index page*/
-.index{
+body.index{
   background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Ftw%20cover.png?v=1618461432258");
   font-family: verdana, helvetica, sans-serif;
   text-align:center;
+  margin:0px;
 }
 .tw{
   color: rgba(255, 214, 0, 1);
-  font-size: 2.5vw;
-  position: relative;
+  font-size: 3.5vw;
+  font-weight: bold;
 }
 marquee.tw1{
-  
+  border: 3px solid red;
+  position: absolute;
+  top:0;
 }
 h1{
   font-size:8vw;
