--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ html.cursor{
 /*index page*/
 body.index{
   background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Ftw%20cover.png?v=1618461432258");
+  background-size: auto;
   font-family: verdana, helvetica, sans-serif;
   text-align:center;
   margin:0px;
@@ -67,9 +68,12 @@ marquee.tw2{
   left:0;
 }
 h1{
-  font-size:8vw;
-  left: 0;
-  margin-top: 30vw;
+  font-size:7vw;
+  position: absolute;
+  margin:0px;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 h3{
   font-family: reenie_beanieregular;
