💾⏲ Checkpoint ./index.html:30726734/942 ./archives.html:30726734/2095 ./style.css:30726734/159 ./main.js:30726734/268

--- a/style.css
+++ b/style.css
@@ -149,3 +149,10 @@ a.homepage:hover{
   width:33%;
   padding:5vh;
 }
+#archives {
+    position: fixed;
+    background: cyan;
+    width: 120px;
+    height: 120px;
+    padding: 20px;
+}
