📉🐿 Checkpoint ./archives.html:30726734/98 ./style.css:30726734/16 ./main.js:30726734/16

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ a.homepage:hover{
   width:33%;
   padding:5vh;
 }
-#archives {
+.sticky {
     position: fixed;
     background: cyan;
     width: 120px;
