--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 /* CSS files add styling rules to your content */
+canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
 
 @font-face {
     font-family: 'reenie_beanieregular';
@@ -155,4 +164,14 @@ a.homepage:hover{
     width: 120px;
     height: 120px;
     padding: 20px;
+}
+
+
+
+
+/*get invovled page*/
+.involved{
+  text-align: center;
+  text-size: 100px;
+  font-family: reenie_beanieregular;
 }
