--- a/style.css
+++ b/style.css
@@ -60,6 +60,42 @@ body.index{
   text-align:center;
   margin:0px;
 }
+.center {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    align-items: center;
+}
+.circle {
+    position: fixed;
+    z-index: 2;
+    width: 60vw;
+    height: 60vw;
+    box-shadow: 0 0 140px white;
+    border-radius: 100%;
+    transition: transform 1s ease-in-out;
+}
+.circle:hover {
+    transform: scale(2.5, 2.5);
+}
+.circle2 {
+    position: fixed;
+    z-index: 2;
+    width: 50vw;
+    height: 50vw;
+    box-shadow: 0 0 140px rgba(255, 214, 0, 1);
+    border-radius: 100%;
+    transition: transform 1s ease-in-out;
+}
+.circle2:hover {
+    transform: scale(2.5, 2.5);
+}
+
+
+
+
 .tw{
   color: rgba(255, 214, 0, 1);
   font-size: 3.5vw;
