--- a/style.css
+++ b/style.css
@@ -71,31 +71,16 @@ body.index{
 .circle {
     position: fixed;
     z-index: 2;
-    width: 60vw;
-    height: 60vw;
-    box-shadow: 0 0 140px white;
-    border-radius: 100%;
-    transition: transform 1s ease-in-out;
-}
-.circle:hover {
-    transform: scale(2.5, 2.5);
-}
-.circle2 {
-    position: fixed;
-    z-index: 2;
-    width: 50vw;
-    height: 50vw;
+    width: 45vw;
+    height: 45vw;
+    background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 0 0 140px rgba(255, 214, 0, 1);
     border-radius: 100%;
     transition: transform 1s ease-in-out;
 }
-.circle2:hover {
-    transform: scale(2.5, 2.5);
+.circle:hover {
+    transform: scale(2, 2);
 }
-
-
-
-
 .tw{
   color: rgba(255, 214, 0, 1);
   font-size: 3.5vw;
