--- a/style.css
+++ b/style.css
@@ -158,15 +158,18 @@ a.homepage:hover{
 
 
 /*mission page*/
-img.voice{
-    width: 150px;
-    height: 150px;
+.mission{
+    justify-content: center;
+    position: fixed;
+    align-items: center;
+}
+.voice{
+    width:45%;
     border-radius: 50%;
     transition: width 2s, height 2s;
 }
 .bigger {
-    height: 400px;
-    width: 400px;
+    width: 100%;
     border-radius: 0%;
     transition: width 2s, height 2s;
 }
@@ -176,9 +179,10 @@ img.voice{
     background-color: rgba(255, 255, 255, 0.5);
     position: absolute;
     padding: 30px;
-    margin-top: 160px;
-    margin-left: 40px;
-    width: 260px;
+    margin-top: 30vh;
+/*     margin-left: 40px; */
+  
+    width: 100%;
 }
 
 
