--- a/style.css
+++ b/style.css
@@ -159,30 +159,27 @@ a.homepage:hover{
 
 /*mission page*/
 .mission{
-    justify-content: center;
-    position: fixed;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
+  margin:0px;
 }
 .voice{
-    width:45%;
-    border-radius: 50%;
-    transition: width 2s, height 2s;
+  width:45%;
+  border-radius: 50%;
+  transition: width 3s, height 3s;
 }
 .bigger {
-    width: 100%;
-    border-radius: 0%;
-    transition: width 2s, height 2s;
+  width: 100%;
+  border-radius: 0%;
+  transition: width 3s, height 3s;
 }
 .text {
-    display: none;
-    border: 3px solid black;
-    background-color: rgba(255, 255, 255, 0.5);
-    position: absolute;
-    padding: 30px;
-    margin-top: 30vh;
-/*     margin-left: 40px; */
-  
-    width: 100%;
+  display: none;
+  border: 3px solid rgba(255, 214, 0, 1);
+  background-color: rgba(255, 255, 255, 0.7);
+  position: absolute;
+  padding: 5%;
+  margin-top: 25%;
 }
 
 
