--- a/style.css
+++ b/style.css
@@ -206,11 +206,17 @@ a.homepage:hover{
   padding:5vh;
 }
 .sticky {
-    position: fixed;
-    background: cyan;
-    width: 120px;
-    height: 120px;
-    padding: 20px;
+  font-family: reenie_beanieregular;
+  font-size: 2.5vw;
+  position: absolute;
+  background: rgba(255, 214, 0, 0.4);
+  border-radius: 20%;
+  width: 20vw;
+  height: 20vw;
+  padding: 20px;
+}
+a.link:hover{
+  color:white;
 }
 .marrow{
   margin-top:40%;
