⛈👟 Checkpoint ./bg.js:30726734/71 ./style.css:30726734/99 ./archives.html:30726734/1469

--- a/style.css
+++ b/style.css
@@ -163,11 +163,13 @@ a.homepage:hover{
   width:45%;
   border-radius: 50%;
   transition: width 3s, height 3s;
+  margin-bottom: 30%;
 }
 .bigger {
   width: 100%;
   border-radius: 0%;
   transition: width 3s, height 3s;
+  margin-bottom:30%;
 }
 .text {
   display: none;
