--- a/style.css
+++ b/style.css
@@ -192,18 +192,18 @@ a.homepage:hover{
   font-size: 3vw;
 }
 .yongsu{
-  border: 3px solid red;
+/*   border: 3px solid red; */
   width:33%;
   padding:5vh;
  
 }
 .bokdong{
-  border: 3px solid red;
+/*   border: 3px solid red; */
   width:33%;
   padding:5vh;
 }
 .estelita{
-  border: 3px solid red;
+/*   border: 3px solid red; */
   width:33%;
   padding:5vh;
 }
@@ -213,8 +213,8 @@ a.homepage:hover{
   position: absolute;
   background: rgba(255, 214, 0, 0.4);
   border-radius: 20%;
-  width: 20vw;
-  height: 20vw;
+  width: 25vw;
+  height: 25vw;
   padding: 20px;
 }
 a.link:hover{
