👗📌 Checkpoint ./style.css:30726734/112

--- a/style.css
+++ b/style.css
@@ -220,6 +220,12 @@ a.homepage:hover{
 a.link:hover{
   color:white;
 }
+.shdoc{
+  margin-top:10%;
+}
+.wishdoc{
+  margin-top:10%;
+}
 .marrow{
   margin-top:40%;
 }
