--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ a.homepage:hover{
 /*mission page*/
 .mission{
   margin:0px;
+  text-align:center;
 }
 .voice{
   width:45%;
@@ -172,6 +173,7 @@ a.homepage:hover{
   margin-bottom:30%;
 }
 .text {
+  text-align: left; 
   display: none;
   border: 3px solid rgba(255, 214, 0, 1);
   background-color: rgba(255, 255, 255, 0.7);
@@ -208,7 +210,7 @@ a.homepage:hover{
   padding:5vh;
 }
 #archives{
-
+border: 3px solid red;
 }
 .sticky {
   font-family: reenie_beanieregular;
@@ -219,6 +221,7 @@ a.homepage:hover{
   width: 25vw;
   height: 25vw;
   padding: 20px;
+  
 }
 a.link:hover{
   color:white;
