--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ a.homepage:hover{
   text-align:center;
 }
 .voice{
-  width:45%;
+  width:50%;
   border-radius: 50%;
   transition: width 3s, height 3s;
   margin-bottom: 30%;
@@ -187,6 +187,7 @@ a.homepage:hover{
 /*archives page*/
 .archives{
   text-align: center;
+  margin: 0px;
 }
 #profiles{
   display: flex;
@@ -211,17 +212,19 @@ a.homepage:hover{
 }
 #archives{
 border: 3px solid red;
+  text-align: center;
+  
 }
 .sticky {
   font-family: reenie_beanieregular;
   font-size: 2.5vw;
-  position: absolute;
+/*   position: absolute; */
   background: rgba(255, 214, 0, 0.4);
   border-radius: 20%;
   width: 25vw;
   height: 25vw;
-  padding: 20px;
-  
+  padding: 3vw;
+/*   transform: translate(100%, 0%); */
 }
 a.link:hover{
   color:white;
