--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ a.homepage:hover{
   display: flex;
   font-family: reenie_beanieregular;
   font-size: 3vw;
+  margin-bottom: 10%; 
 }
 .yongsu{
 /*   border: 3px solid red; */
@@ -210,21 +211,19 @@ a.homepage:hover{
   width:33%;
   padding:5vh;
 }
-#archives{
-border: 3px solid red;
-  text-align: center;
-  
+.archive{
+  display: flex; 
+  justify-content: center;
 }
 .sticky {
   font-family: reenie_beanieregular;
   font-size: 2.5vw;
-/*   position: absolute; */
   background: rgba(255, 214, 0, 0.4);
   border-radius: 20%;
   width: 25vw;
   height: 25vw;
   padding: 3vw;
-/*   transform: translate(100%, 0%); */
+  margin:1vw;
 }
 a.link:hover{
   color:white;
@@ -243,9 +242,6 @@ a.link:hover{
 }
 .wishdoc{
   margin-top:14%;
-}
-.marrow{
-  margin-top:40%;
 }
 
 
