--- a/style.css
+++ b/style.css
@@ -45,8 +45,7 @@ a:hover{
   padding: 10vw;
 }
 html.cursor{
-  cursor: auto;
-  cursor: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbutterfly.png?v=1618901369440");
+  cursor: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbutterfly.png?v=1618901369440" width="32");
 }
 
 
@@ -193,7 +192,7 @@ a.homepage:hover{
   display: flex;
   font-family: reenie_beanieregular;
   font-size: 3vw;
-  margin-bottom: 10%; 
+  margin-bottom: 5%; 
 }
 .yongsu{
 /*   border: 3px solid red; */
@@ -211,6 +210,9 @@ a.homepage:hover{
   width:33%;
   padding:5vh;
 }
+/* a.pic:hover{ HOVERING OVER PICS TO GET COOL CIRCLE 
+  
+} */
 .archive{
   display: flex; 
   justify-content: center;
@@ -223,7 +225,7 @@ a.homepage:hover{
   width: 25vw;
   height: 25vw;
   padding: 3vw;
-  margin:1vw;
+  margin:-2vw;
 }
 a.link:hover{
   color:white;
