--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ a:hover{
   text-align:center;
   padding: 10vw;
 }
-html.cursor{
-  cursor: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbutterfly.png?v=1618901369440" width="32");
+html.bcursor{
+  cursor: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbutterfly.png?v=1619165571039"), auto;
 }
 
 
