--- a/style.css
+++ b/style.css
@@ -146,11 +146,16 @@ a.homepage:hover{
 
 
 /*about page*/
+.text1{
+  margin-left: 50%;
+  border: 3px solid red;
+  position: absolute;
+}
 .aimages{
-  display: block;
+/*   display: block; */
   margin-left: auto;
-  margin-right: auto;
-  width: 75%;
+/*   margin-right: auto; */
+  width: 45%;
 }
 
 
