--- a/style.css
+++ b/style.css
@@ -21,8 +21,11 @@ canvas {
 /*global styling*/
 h3{
   font-family: reenie_beanieregular;
+  text-align: center;
+  font-family: reenie_beanieregular;
+  font-size: 6vw;
+  margin:2%;
 }
-
 body{
   background-size: cover;
   background-repeat: no-repeat;
@@ -100,11 +103,6 @@ h1.enter{
   top:50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-h3{
-  font-family: reenie_beanieregular;
-  font-size: 6vw;
-  margin:2%;
 }
 
 
