📈🌋 Checkpoint ./.glitch-assets:30726734/8897 ./memorials.html:30726734/32 ./style.css:30726734/56

--- a/style.css
+++ b/style.css
@@ -273,6 +273,9 @@ a.link:hover{
 
 /*memorials page*/
 .bronzegirl{
+  background-image: url("")
+}
+.bgpic{
   text-align: center;
 }
 .container{
