--- a/style.css
+++ b/style.css
@@ -272,11 +272,23 @@ a.link:hover{
 
 
 /*memorials page*/
-.bronzegirl{
-  background-image: url("")
+.memorials{
+  margin: 0;
+}
+h3.bronzegirl{
+  color: white;
+  padding: 10%; 
+  background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fcw.jpg?v=1618466960999");
+  background-position: 0 20%;
+  background-size: cover;
+  margin:0px;
 }
 .bgpic{
   text-align: center;
+}
+p.textt{
+  padding: 4%;
+  border: 3px solid red;
 }
 .container{
  	width: 60%;
