🎩👂 Checkpoint ./style.css:30726734/44 ./memorials.html:30726734/1648

--- a/style.css
+++ b/style.css
@@ -287,8 +287,7 @@ h3.bronzegirl{
   text-align: center;
 }
 p.textt{
-  padding: 4%;
-  border: 3px solid red;
+  padding: 3% 6%;
 }
 .container{
  	width: 60%;
