🎟💵 Checkpoint ./memorials.html:30726734/5556 ./style.css:30726734/154

--- a/style.css
+++ b/style.css
@@ -355,9 +355,12 @@ button:visited{
   0%{transform: translateX(0);}
   100%{transform:translatex(-400%);}
 }
-.europe{
-  width: 48%;
-  border: 3px solid red;
+.statues{
+  display: flex;
+  margin-bottom:10%;
+}
+.stat{
+  width:50%;
 }
 
 /*get involved page*/
