🐂🐡 Checkpoint ./style.css:30726734/64 ./about.html:30726734/4 ./index.html:30726734/291

--- a/style.css
+++ b/style.css
@@ -342,8 +342,8 @@ button:visited{
   animation: scrolling 20s linear infinite;
 }
 .marqueeitem{
-  height:50%;
-  width:50%; 
+  height:30vh;
+  width:30vw; 
   flex-shrink:0;
 }
 .marqueeimage{
