--- a/style.css
+++ b/style.css
@@ -50,6 +50,12 @@ html.bcursor{
   cursor: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbutterfly.png?v=1619166414758"), auto;
 }
 
+.logo{
+  background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Flogo.png?v=1619587560822" width="50%");
+  
+  border: 3px solid red;
+  
+}
 
 /*index page*/
 body.index{
