--- a/style.css
+++ b/style.css
@@ -49,12 +49,16 @@ a:hover{
 html.bcursor{
   cursor: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbutterfly.png?v=1619166414758"), auto;
 }
-
 .logo{
-  background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Flogo.png?v=1619587560822" width="50%");
-  
+  position: fixed;
+  top: 2%; 
+  left: 2%;
+  width: 15%;
+  height: 20vh;
   border: 3px solid red;
-  
+  background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Flogo.png?v=1619587560822");
+  background-repeat: no-repeat;
+  background-size: 100%; 
 }
 
 /*index page*/
@@ -126,12 +130,7 @@ h1.home1{
   margin-top: 30vw;
   color: white;
 }
-/*
-.home2{
-   border: 3px solid red;
-}*/
 a.homepage{
-  /*border: 3px solid red;*/
   margin-top: 100px;
   
 }
