--- a/style.css
+++ b/style.css
@@ -50,12 +50,12 @@ html.bcursor{
   cursor: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbutterfly.png?v=1619166414758"), auto;
 }
 .logo{
-  position: fixed;
-  top: 2%; 
-  left: 2%;
-  width: 15%;
-  height: 20vh;
-  border: 3px solid red;
+  position: absolute;
+  top: 0; 
+  left: 0;
+  width: 12%;
+  height: 50vh;
+/*   border: 3px solid red; */
   background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Flogo.png?v=1619587560822");
   background-repeat: no-repeat;
   background-size: 100%; 
