--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ canvas {
 h3{
   font-family: reenie_beanieregular;
   text-align: center;
-  font-size: 6vw;
+  font-size: 7vw;
   margin:2%;
 }
 body{
@@ -53,7 +53,7 @@ html.bcursor{
   position: absolute;
   top: 0; 
   left: 0;
-  width: 15%;
+  width: 18%;
   height: 50vh;
   background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Flogo.png?v=1619596020757");
   background-repeat: no-repeat;
@@ -185,9 +185,10 @@ h3#hist{
 
 .scroll-text {
   position: relative;
-  border: 3px solid green;
+/*   border: 3px solid green; */
   width: 40%;
   padding: 5%;
+  margin: 8% 0%;
   font-size: 120%;
   right: 0;
 }
@@ -201,7 +202,7 @@ h3#hist{
 
 .aimages {
   width: 45vw;
-  border: 3px solid yellow;
+/*   border: 3px solid yellow; */
   padding: 1%;
 }
 
@@ -245,26 +246,21 @@ h3#hist{
   font-family: reenie_beanieregular;
   font-size: 3vw;
   margin-bottom: 5%; 
+  margin-top: 7%;
 }
 .yongsu{
-/*   border: 3px solid red; */
   width:33%;
   padding:5vh;
  
 }
 .bokdong{
-/*   border: 3px solid red; */
   width:33%;
   padding:5vh;
 }
 .estelita{
-/*   border: 3px solid red; */
   width:33%;
   padding:5vh;
 }
-/* a.pic:hover{ HOVERING OVER PICS TO GET COOL CIRCLE 
-  
-} */
 .archive{
   display: flex; 
   justify-content: center;
