--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* CSS files add styling rules to your content */
 canvas {
   width: 100%;
   height: 100%;
@@ -16,7 +15,6 @@ canvas {
     font-weight: normal;
     font-style: normal;
 }
-
 
 /*global styling*/
 h3{
@@ -58,6 +56,7 @@ html.bcursor{
   background-image: url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Flogo.png?v=1619596020757");
   background-repeat: no-repeat;
   background-size: 100%; 
+  z-index: 2;
 }
 
 /*index page*/
@@ -154,13 +153,18 @@ a.homepage:hover{
   position: absolute; 
 }
 h3#hist{
-  border: 3px solid red;
+/*   border: 3px solid red; */
   position: sticky; 
   width: 100vw; 
   text-align: center; 
   margin: 0;
   padding: 2%; 
   top: 0px;
+  background-image:url("https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2FScreen%20Shot%202021-04-29%20at%203.24.44%20PM.png?v=1619736066222");
+  z-index: 1;
+}
+h4.subtitle{
+  font-size: 180%;
 }
 .txt{
   border: 3px solid red;
@@ -188,7 +192,6 @@ h3#hist{
 /*   border: 3px solid green; */
   width: 40%;
   padding: 5%;
-  margin: 8% 0%;
   font-size: 120%;
   right: 0;
 }
@@ -196,7 +199,7 @@ h3#hist{
 .sticky-img {
 /*   position: fixed; */
   position: sticky;
-  top: 100px;
+  top: 20%;
   align-self: flex-start;
 }
 
