🐊✋ Checkpoint ./style.css:30726734/173

--- a/style.css
+++ b/style.css
@@ -369,8 +369,8 @@ button:focus{
   margin-bottom:10%;
 }
 .stat{
-  width:40vw;
-  height40vh;
+  width:30vw;
+  height:30vh;
 }
 
 /*get involved page*/
